# chibi

./: Cargo.toml  README.md  chibi  config.toml
.github/workflows/: rust.yml
src/: app.rs  capture.rs  config.rs  lib.rs  main.rs  mic_capture.rs
src/capture/: alsa_util.rs  mod.rs
